--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<div class="container">
-  <div class="rose-container">
-    <!-- Multiple roses will be added here dynamically -->
-  </div>
-  <div class="content">
-    <h1 class="question">Will you accept my rose?</h1>
-    <div class="buttons">
-      <button id="yesBtn" class="btn">🌸 Yes 🌸</button>
-      <button id="noBtn" class="btn">🥀 No 🥀</button>
-    </div>
-    <div id="result"></div>
-  </div>
-  <div id="roseRain"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>360° Portfolio</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <canvas id="pano"></canvas>
+  <div id="pillars"></div>
+
+  <script src="script.js"></script>
+</body>
+</html>
