--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>360° Portfolio</title>
+  <title>360° Portfolio — Fixed World Pillars</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
       <canvas id="bg" width="800" height="600"></canvas>
       <div id="pillars"></div>
     </div>
-    <div id="hud"><b>Drag horizontally</b> to look around. Click a pillar to open a project.</div>
+    <div id="hud"><b>Drag horizontally</b> — the world (panorama + pillars) is stationary; only your view rotates.</div>
   </div>
 
   <script src="script.js"></script>
