--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>360° Portfolio — Fixed World Pillars</title>
+  <title>Portfolio Circle View • Panorama + Curved Capsules (No libs)</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="app">
-    <div id="viewer" aria-label="360 viewer">
+    <div id="viewer" aria-label="360 viewer (offline demo)">
       <canvas id="bg" width="800" height="600"></canvas>
-      <div id="pillars"></div>
+      <!-- Pillars injected here -->
     </div>
-    <div id="hud"><b>Drag horizontally</b> — the world (panorama + pillars) is stationary; only your view rotates.</div>
+    <div id="hud"><b>Drag horizontally</b> to look around. Click a pillar to open a project.</div>
   </div>
 
   <script src="script.js"></script>
